# butane

./: .mise.toml  Cargo.toml
.cargo/: config.toml
butane/: Cargo.toml
butane/src/: lib.rs
butane/tests/: basic.rs  many.rs  query.rs  r2d2.rs
butane/tests/common/: blog.rs
butane_cli/: Cargo.toml
butane_cli/src/: lib.rs  main.rs
butane_codegen/: Cargo.toml
butane_core/: Cargo.toml
butane_core/src/: custom.rs  fkey.rs  lib.rs  many.rs  oncecell_serde.rs
butane_core/src/codegen/: dbobj.rs  mod.rs
butane_core/src/db/: adapter.rs  connmethods.rs  mod.rs  r2.rs  sqlite.rs
butane_core/src/migrations/: fsmigrations.rs  mod.rs
butane_test_helper/: Cargo.toml
butane_test_helper/src/: lib.rs
butane_test_macros/: Cargo.toml
example/src/: main.rs
examples/getting_started/src/: lib.rs  models.rs
examples/getting_started/tests/: rollback.rs
examples/getting_started_uuid/: Cargo.toml
examples/getting_started_uuid/.butane/: clistate.json
examples/getting_started_uuid/.butane/migrations/: state.json
examples/getting_started_uuid/.butane/migrations/current/: Blog.table  Post.table  Post_tags_Many.table  types.json
examples/getting_started_uuid/src/: butane_migrations.rs  lib.rs  models.rs
examples/getting_started_uuid/tests/: rollback.rs
examples/newtype/: Cargo.toml
examples/newtype/src/: lib.rs  models.rs
examples/newtype/tests/: rollback.rs
