[package]
name = "butane_core"
version = "0.5.2-alpha.5"
authors = ["James Oakley <james@electronstudio.org>"]
edition.workspace = true
description = "Internals for Butane. Do not use this crate directly -- use the butane crate."
readme = "../README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/Electron100/butane"


[features]
datetime = ["chrono", "postgres?/with-chrono-0_4"]
debug = ["log"]
json = ["postgres?/with-serde_json-1", "rusqlite?/serde_json"]
sqlite = ["rusqlite"]
sqlite-bundled = ["rusqlite/bundled"]
tls = ["postgres-native-tls", "native-tls"]
pg = ["postgres", "bytes"]


[dependencies]
bytes = { version = "1.0", optional = true }
cfg-if = "1.0"
chrono = { version = "0.4", default-features = false, features = [
  "serde",
  "std",
], optional = true }
fake = { version = "2.5.1-alpha.1", registry = "franklin-ai-rosalind", optional = true, features = [
  "derive",
  "chrono",
  "uuid",
] }
fallible-iterator = "0.2"
fallible-streaming-iterator = "0.1"
fs2 = "0.4" # for file locks
hex = "0.4"
log = { version = "0.4", optional = true }
native-tls = { version = "0.2", optional = true }
once_cell = { package = "once_cell_serde", version = "1.17", features = ["serde"] }
pin-project = "1"
postgres = { version = "0.19", optional = true }
postgres-native-tls = { version = "0.5", optional = true }
proc-macro2 = { version = "1.0", default-features = false }
quote = { version = "1.0", default-features = false }
regex = { version = "1.5", default-features = false, features = ["std"] }
r2d2 = { version = "0.8", optional = true }
rusqlite = { workspace = true, optional = true }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_json = "1.0"
syn = { version = "1.0", features = [ "extra-traits", "full" ] }
thiserror = "1.0"
uuid = { workspace = true, optional = true }
rand = "0.8"
utoipa = { version = "=3.0.4-alpha.2", registry = "franklin-ai-rosalind" }
